--- a/TabbMarcusExerciseForms/css/main.css
+++ b/TabbMarcusExerciseForms/css/main.css
@@ -77,6 +77,14 @@ ul {
   /* I blocked off what I think I didn't need to leave and left what I thought was needed for the CSS assignment. */
 }
 
+ol {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  flex-flow: wrap;
+  /* Still learning how to edit the flex box properties */
+}
+
 img {
   display: block;
   margin: auto;
